Actually fixed clipping now

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -61,7 +61,7 @@ html, body {
 	}
 }
 
-@media (max-width: 767px)
+@media (max-width: 991px)
 {
     #footer
     {
